# book-library

./: .coverage  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/booklib/: __init__.py  models.py  services.py
tests/: test_services.py
