[project]
name = "booklib"
version = "0.1.0"
description = ""
authors = [
    {name = "aspaul20",email = "amursaqib1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "booklib", from = "src"}]

[tool.pytest.ini_options]
pythonpath=["src"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
